--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "webgl",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "dependencies": {
     "npm": "^6.9.0"
   },
   "devDependencies": {
-    "gulp": "^4.0.0"
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "gulp": "^4.0.0",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.html"
   },
   "author": "",
   "license": "ISC"
