--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
     "gulp": "^4.0.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.5.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
