--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "@types/webgl2": "0.0.4",
     "npm": "^6.9.0"
   },
   "devDependencies": {
